--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OpenAI Proxy Streaming</title>
+    <title>AI Proxy Streaming</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script
       async
       src="https://ga.jspm.io/npm:es-module-shims@2.0.10/dist/es-module-shims.js"
@@ -304,17 +305,6 @@
           Ask ChatGPT
         </button>
       </div>
-      <button id="refundButton" class="btn btn-secondary btn-sm">
-        Refund unspent tokens
-      </button>
-      <br />
-      <pre>
-        <code
-          id="refund_message_area"
-          readonly
-          style="width: 100%; height: 200px; white-space: pre-wrap;"
-        ></code>
-      </pre>
     </div>
 
     <script src="main.js" type="module"></script>
